[gd_scene load_steps=2 format=3 uid="uid://dmx8q3n2plwk7"]

[ext_resource type="Script" path="res://scripts/game/game.gd" id="1_game"]

[node name="Game" type="Node2D"]
script = ExtResource("1_game")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseMenu" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="CanvasLayer/PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="CanvasLayer/PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Resume"

[node name="MainMenuButton" type="Button" parent="CanvasLayer/PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Main Menu"

[node name="PlaceholderLabel" type="Label" parent="."]
offset_left = 800.0
offset_top = 500.0
offset_right = 1120.0
offset_bottom = 580.0
theme_override_font_sizes/font_size = 32
text = "Game Scene
Press ESC to pause"
horizontal_alignment = 1

[connection signal="pressed" from="CanvasLayer/PauseMenu/VBoxContainer/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_pressed"]
